minWidth on account cards to stop table bleeding over

--- a/nerdlets/cloud-optimize-nerdlet/styles.scss
+++ b/nerdlets/cloud-optimize-nerdlet/styles.scss
@@ -50,11 +50,7 @@
   .card-content-light {
       color: black
   }
-
-  .config {
-
-  }
-
+  
   .config-dark {
       background-color: black;
   }
